--- a/index.html
+++ b/index.html
@@ -27,56 +27,46 @@
   </p>
   <div class="hero-buttons">
     <a href="#works" class="btn primary">View My Works</a>
-    <a href="#contact" class="btn secondary">Contact Me</a>
+    <a href="#services" class="btn secondary">Services</a>
   </div>
 </section>
 
 <!-- WORKS -->
 <section id="works" class="section">
   <h2>My Works</h2>
-
   <div class="grid">
-
     <div class="video-card">
       <video autoplay muted loop playsinline>
-        <source src="videos/reel.mp4" type="video/mp4">
+        <source src="videos/work1.mp4" type="video/mp4">
       </video>
-      <span>🎬 Reels & Shorts Editing</span>
     </div>
-
     <div class="video-card">
       <video autoplay muted loop playsinline>
-        <source src="videos/gaming.mp4" type="video/mp4">
+        <source src="videos/work2.mp4" type="video/mp4">
       </video>
-      <span>🎮 Gaming Montages</span>
     </div>
-
     <div class="video-card">
       <video autoplay muted loop playsinline>
-        <source src="videos/youtube.mp4" type="video/mp4">
+        <source src="videos/work3.mp4" type="video/mp4">
       </video>
-      <span>📹 YouTube Video Editing</span>
     </div>
+  </div>
+</section>
 
-    <div class="video-card">
-      <video autoplay muted loop playsinline>
-        <source src="videos/motion.mp4" type="video/mp4">
-      </video>
-      <span>⚡ Motion Graphics</span>
-    </div>
-
-    <div class="video-card">
-      <video autoplay muted loop playsinline>
-        <source src="videos/story.mp4" type="video/mp4">
-      </video>
-      <span>🧠 Story-based Edits</span>
-    </div>
-
+<!-- SERVICES -->
+<section id="services" class="section dark">
+  <h2>Services</h2>
+  <div class="grid">
+    <div class="service-card">Reels & Shorts Editing</div>
+    <div class="service-card">Gaming Montages</div>
+    <div class="service-card">YouTube Video Editing</div>
+    <div class="service-card">Motion Graphics</div>
+    <div class="service-card">Story-based Edits</div>
   </div>
 </section>
 
 <!-- ABOUT -->
-<section class="section dark">
+<section class="section">
   <h2>About Me</h2>
   <p class="about-text">
     I’m <strong>Sibam</strong>, a visual editor focused on clean cuts,
@@ -86,7 +76,7 @@
 </section>
 
 <!-- TOOLS -->
-<section class="section">
+<section class="section dark">
   <h2>Tools I Use</h2>
   <div class="grid two">
     <div class="tool-card">
@@ -98,17 +88,40 @@
       <p>Advanced effects, cinematic layers, precision control</p>
     </div>
   </div>
-  <p class="quote">“Tools don’t matter. Taste, timing, and execution do.”</p>
 </section>
 
 <!-- CONTACT -->
-<section id="contact" class="section dark">
-  <h2>Work With Me</h2>
-  <p>Let’s turn your ideas into visuals that perform.</p>
-  <a href="#" class="btn primary">Contact Now →</a>
+<section id="contact" class="section">
+  <h2>Contact Me</h2>
+  <p class="contact-text">Let’s turn your ideas into visuals that perform.</p>
+  <p class="availability">🕒 Available for freelance & long-term projects</p>
 </section>
 
-<!-- FOOTER -->
+<!-- FLOATING BUTTONS -->
+<div class="floating-buttons">
+
+  <!-- Discord -->
+  <a href="https://discord.com/users/sibamdeep.db" target="_blank"
+     class="float-btn discord" title="Discord: @sibamdeep.db">
+    <svg viewBox="0 0 245 240">
+      <path fill="currentColor"
+        d="M104.4 104.7c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.3-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1zm36.2 0c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.3-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1z"/>
+      <path fill="currentColor"
+        d="M189.5 20h-134C24.7 20 10 34.7 10 53.5v133c0 18.8 14.7 33.5 33.5 33.5h113.5l-5.3-18.5 46.4 43.3V53.5C198.1 34.7 183.4 20 164.6 20z"/>
+    </svg>
+  </a>
+
+  <!-- Gmail -->
+  <a href="mailto:sibamsvisual@gmail.com"
+     class="float-btn gmail" title="Email: sibamsvisual@gmail.com">
+    <svg viewBox="0 0 24 24">
+      <path fill="currentColor"
+        d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/>
+    </svg>
+  </a>
+
+</div>
+
 <footer>
   © 2026 Sibam’sVisual. All Rights Reserved.
 </footer>
