--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@
 
 <footer>
   © 2026 Sibam’sVisual. All Rights Reserved.
+</footer>
+<footer>
   Made By Vortexa
 </footer>
-
+  
 </body>
 </html>
